--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.5.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 certifi==2024.8.30
+cffi==1.17.1
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.2.0
@@ -22,7 +25,10 @@ mdurl==0.1.2
 packaging==24.1
 pluggy==1.5.0
 psycopg2-binary==2.9.9
+pwdlib==0.2.1
+pycparser==2.22
 pydantic==2.9.2
+pydantic-settings==2.5.2
 pydantic_core==2.23.4
 Pygments==2.18.0
 pytest==8.3.3
