--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+PyJWT==2.9.0
 pytest==8.3.3
 python-dotenv==1.0.1
 python-multipart==0.0.9
