--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          context: ./
+          file: ./docker/Dockerfile
       - name: Build the Docker image
         run: docker build -t ldamasio/msx-api:latest .
       - name: Login to Docker Hub
