--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,16 +8,20 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4.1.1
+
+      - name: Docker Login
+        uses: docker/login-action@v3.0.0
         with:
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
+
+      - name: Build and push Docker
+        uses: docker/build-push-action@v5.0.0
+        with: 
           context: ./
           file: ./docker/Dockerfile
-      - name: Build the Docker image
-        run: docker build -t ldamasio/msx-api:latest .
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_PWD }}
-      - name: Push the Docker image
-        run: docker push ldamasio/msx-api:latest
+          push: true
+          tags: | 
+            ldamasio/msx-api:0.0.${{github.run_number}}
+            ldamasio/msx-api:latest
